cabal-version:      2.4
name:               visnek
version:            0.1.0.0

author:             Gus
maintainer:         gus@ef.je

executable visnek
    main-is:          Main.hs

    other-modules:
        GS
        Render
        Snake
        Util

    build-depends:    
            base       ^>=4.14.3.0
        ,   gloss      ^>=1.13.2.2
        ,   random     ^>=1.2.1.1
        ,   bmp        ^>=1.2.6.3
        ,   bytestring ^>=0.11.3.1
        ,   split      ^>=0.2.3.5
        ,   containers ^>=0.6.6
        ,   directory  ^>=1.3.7.1
    hs-source-dirs:   app
    default-language: Haskell2010
